[package]
name = "bevy-steam-audio"
version = "0.1.0"
edition = "2021"
authors = ["Connor McCluskey <conmcclusk@gmail.com>"]
description = "Bevy Integration for Valve's spatial audio library"
repository = "https://github.com/aceeri/bevy-steam-audio.git"
readme = "README.md"
keywords = ["steam", "audio", "vr", "binaural", "gamedev"]
categories = ["multimedia::audio", "games", "simulation"]
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" }
steam-audio = { version = "0.3" }
glam = "0.20.5"

[patch.crates-io]
steam-audio = { path = "../steam-audio-rs/steam-audio" }

[[example]]
name = "basic"
path = "examples/basic.rs"
